added new items and updated rarities and balancing
fixed bg issue in gameLoader( loading the wrong bgs)